GearsetPOC/force-app/main/default/objects/Redshift_Points_Transfers__c/Redshift_Points_Transfers__c.object-meta.xml
<CustomObject>
    <label>Redshift Points Transfers</label>
    <nameField>
        <displayFormat>RPT-{0000000000}</displayFormat>
        <label>Redshift Points Transfers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redshift Points Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>