GearsetPOC/force-app/main/default/objects/Redshift_Points_Transfers__c/fields/FromMemberSalesforceId__c.field-meta.xml
<CustomField>
    <fullName>FromMemberSalesforceId__c</fullName>
    <label>FromMemberSalesforceId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>