GearsetPOC/force-app/main/default/objects/Redshift_Points_Transfers__c/fields/FromMembershipNumber__c.field-meta.xml
<CustomField>
    <fullName>FromMembershipNumber__c</fullName>
    <label>FromMembershipNumber</label>
    <length>17</length>
    <type>Text</type>
</CustomField>