GearsetPOC/force-app/main/default/objects/Redshift_Points_Transfers__c/fields/ToMemberSalesforceId__c.field-meta.xml
<CustomField>
    <fullName>ToMemberSalesforceId__c</fullName>
    <label>ToMemberSalesforceId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>