GearsetPOC/force-app/main/default/objects/Redshift_Points_Transfers__c/fields/ToMembershipNumber__c.field-meta.xml
<CustomField>
    <fullName>ToMembershipNumber__c</fullName>
    <label>ToMembershipNumber</label>
    <length>17</length>
    <type>Text</type>
</CustomField>