GearsetPOC/force-app/main/default/objects/Redshift_Points_Transfers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FromMembershipNumber__c</columns>
    <columns>ToMembershipNumber__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>